ARM64: configs: ruby_defconfig add KSU option

--- a/arch/arm64/configs/ruby_defconfig
+++ b/arch/arm64/configs/ruby_defconfig
@@ -445,3 +445,7 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_FAULT_INJECTION=y
+
+# KernelSU
+CONFIG_KSU=n
+# CONFIG_KSU_DEBUG is not set
