--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -550,4 +550,5 @@ source "drivers/misc/ocxl/Kconfig"
 source "drivers/misc/cardreader/Kconfig"
 source "drivers/misc/mediatek/Kconfig"
 source "drivers/misc/hwid/Kconfig"
+source "drivers/misc/kprofiles/Kconfig"
 endmenu
