--- a/arch/arm64/configs/ruby_defconfig
+++ b/arch/arm64/configs/ruby_defconfig
@@ -449,3 +449,12 @@ CONFIG_FAULT_INJECTION=y
 # KernelSU
 CONFIG_KSU=n
 # CONFIG_KSU_DEBUG is not set
+
+#
+# Kprofile
+#
+CONFIG_KPROFILES=y
+CONFIG_AUTO_KPROFILES=y
+CONFIG_AUTO_KPROFILES_MSM_DRM=y
+# CONFIG_AUTO_KPROFILES_FB is not set
+# CONFIG_AUTO_KPROFILES_NONE is not set
