--- a/arch/arm64/configs/ruby_ksu_defconfig
+++ b/arch/arm64/configs/ruby_ksu_defconfig
@@ -450,3 +450,12 @@ CONFIG_FAULT_INJECTION=y
 # KernelSU
 CONFIG_KSU=y
 # CONFIG_KSU_DEBUG is not set
+
+#
+# Kprofile
+#
+CONFIG_KPROFILES=y
+CONFIG_AUTO_KPROFILES=y
+CONFIG_AUTO_KPROFILES_MSM_DRM=y
+# CONFIG_AUTO_KPROFILES_FB is not set
+# CONFIG_AUTO_KPROFILES_NONE is not set
