--- a/arch/arm64/configs/ruby_defconfig
+++ b/arch/arm64/configs/ruby_defconfig
@@ -203,9 +203,6 @@ CONFIG_RSEQ=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 # CONFIG_PC104 is not set
-# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
-# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
-CONFIG_PELT_UTIL_HALFLIFE_8=y
 
 #
 # Extension scheduler feature
@@ -5769,3 +5766,10 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_CORESIGHT is not set
+
+#
+# FAIR Scheduler tunables
+#
+# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+CONFIG_PELT_UTIL_HALFLIFE_8=y
