--- a/arch/arm64/configs/ruby_ksu_defconfig
+++ b/arch/arm64/configs/ruby_ksu_defconfig
@@ -5767,3 +5767,10 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_CORESIGHT is not set
+
+#
+# FAIR Scheduler tunables
+#
+# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+CONFIG_PELT_UTIL_HALFLIFE_8=y
