--- a/arch/arm64/configs/ruby_ksu_defconfig
+++ b/arch/arm64/configs/ruby_ksu_defconfig
@@ -442,6 +442,7 @@ CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6877"
 CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/ruby"
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
 #
 # Power management options
