--- a/arch/arm64/configs/ruby_defconfig
+++ b/arch/arm64/configs/ruby_defconfig
@@ -1,19 +1,7 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.19.294 Kernel Configuration
+# Linux/arm64 4.19.296 Kernel Configuration
 #
-
-#
-# Compiler: aarch64-linux-gnu-gcc (CAT (=^ェ^=) GCC) 13.1.1 20230629
-#
-CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=130101
-CONFIG_CLANG_VERSION=0
-CONFIG_LLD_VERSION=0
-CONFIG_CC_HAS_ASM_GOTO=y
-CONFIG_IRQ_WORK=y
-CONFIG_BUILDTIME_EXTABLE_SORT=y
-CONFIG_THREAD_INFO_IN_TASK=y
 
 #
 # General setup
@@ -440,6 +428,7 @@ CONFIG_IMG_GZ_DTB=y
 CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6877"
 CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/ruby"
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
 
@@ -634,7 +623,6 @@ CONFIG_ARCH_HAS_RELR=y
 # GCOV-based kernel profiling
 #
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
-CONFIG_PLUGIN_HOSTCC=""
 CONFIG_HAVE_GCC_PLUGINS=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
@@ -711,6 +699,13 @@ CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
 CONFIG_GKI_HIDDEN_GPU_CONFIGS=y
 # CONFIG_GKI_HIDDEN_IRQ_CONFIGS is not set
 # CONFIG_GKI_HACKS_TO_FIX is not set
+
+#
+# FAIR Scheduler tunables
+#
+# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+CONFIG_PELT_UTIL_HALFLIFE_8=y
 CONFIG_FREEZER=y
 
 #
@@ -1178,8 +1173,6 @@ CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_U32=y
 CONFIG_CLS_U32_PERF=y
 CONFIG_CLS_U32_MARK=y
-# CONFIG_NET_CLS_RSVP is not set
-# CONFIG_NET_CLS_RSVP6 is not set
 CONFIG_NET_CLS_FLOW=y
 # CONFIG_NET_CLS_CGROUP is not set
 CONFIG_NET_CLS_BPF=y
@@ -1385,9 +1378,9 @@ CONFIG_OF_RESERVED_MEM=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
-CONFIG_ZRAM_SIZE_OVERRIDE=2
 # CONFIG_ZRAM_WRITEBACK is not set
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
+CONFIG_ZRAM_SIZE_OVERRIDE=2
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
@@ -2034,7 +2027,7 @@ CONFIG_MTK_ARCHCOUNTER_TIMESYNC=y
 CONFIG_MI_HARDWARE_ID=y
 CONFIG_KPROFILES=y
 CONFIG_KP_DEFAULT_MODE=2
-# CONFIG_AUTO_KPROFILES_MSM_DRM is not set
+CONFIG_AUTO_KPROFILES=y
 # CONFIG_AUTO_KPROFILES_MI_DRM is not set
 CONFIG_AUTO_KPROFILES_FB=y
 # CONFIG_AUTO_KPROFILES_NONE is not set
@@ -5009,6 +5002,7 @@ CONFIG_PM_OPP=y
 # KernelSU
 #
 # CONFIG_KSU is not set
+# CONFIG_KSU_DEBUG is not set
 
 #
 # File systems
@@ -5241,7 +5235,6 @@ CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_HARDENED_USERCOPY_FALLBACK=y
 # CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
-# CONFIG_FORTIFY_SOURCE is not set
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH=""
 CONFIG_SECURITY_SELINUX=y
@@ -5273,7 +5266,7 @@ CONFIG_DEFAULT_SECURITY="selinux"
 # Memory initialization
 #
 CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_ENABLER=y
 CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
 CONFIG_INIT_STACK_NONE=y
 # CONFIG_INIT_STACK_ALL_PATTERN is not set
@@ -5612,7 +5605,7 @@ CONFIG_HAVE_ARCH_KASAN_SW_TAGS=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 CONFIG_CC_HAS_KASAN_SW_TAGS=y
 # CONFIG_KASAN is not set
-CONFIG_KASAN_STACK=1
+CONFIG_KASAN_STACK=0
 CONFIG_ARCH_HAS_KCOV=y
 CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_KCOV is not set
@@ -5768,10 +5761,3 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_CORESIGHT is not set
-
-#
-# FAIR Scheduler tunables
-#
-# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
-# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
-CONFIG_PELT_UTIL_HALFLIFE_8=y
