fixing gcc compiler errors

--- a/arch/arm64/configs/ruby_ksu_defconfig
+++ b/arch/arm64/configs/ruby_ksu_defconfig
@@ -3489,7 +3489,7 @@ CONFIG_SND_SOC_MEDIATEK=y
 # CONFIG_SND_SOC_MT6873 is not set
 # CONFIG_SND_SOC_MT6873_MT6359 is not set
 CONFIG_SND_SOC_MT6877=y
-CONFIG_SND_SOC_MT6877_MT6359=y
+# CONFIG_SND_SOC_MT6877_MT6359=y
 # CONFIG_SND_SOC_MT6885 is not set
 # CONFIG_SND_SOC_MT6885_MT6359 is not set
 # CONFIG_SND_SOC_MT8173 is not set
@@ -3506,7 +3506,7 @@ CONFIG_SND_SOC_MTK_BTCVSD=y
 # CONFIG_MTK_AUDIO_TUNNELING_SUPPORT is not set
 # CONFIG_MTK_AUDIO_SCP_SPKPROTECT_SUPPORT is not set
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
-CONFIG_SND_SOC_MTK_AUDIO_DSP=y
+# CONFIG_SND_SOC_MTK_AUDIO_DSP is not set
 CONFIG_MTK_ULTRASND_PROXIMITY=y
 
 #
